--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -260,7 +260,7 @@
 
     <div class="col-md-4">
         <div style="text-align: center">
-            <h1 id="getting-started"></h1>
+            <h1 id="countdown">15:00</h1>
         </div>
         <div class="chat_window">
             <div class="top_menu">
